<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ottosoft.maxi.quinigen.MainActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btnPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/btn_principal" />

    <CheckBox
        android:id="@+id/checkBox_jugada1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/chkb_j1" />

    <CheckBox
        android:id="@+id/checkBox_jugada2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/chkb_j2" />

    <CheckBox
        android:id="@+id/checkBox_jugada3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/chkb_j3" />

    <EditText
        android:id="@+id/txtNumAleatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.10"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/btn_save" />

</LinearLayout>
